--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
-
   "name": "backend",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
@@ -16,15 +15,12 @@
     "axios": "^1.12.2",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
-    "express": "^5.1.0"
-
+    "express": "^5.1.0",
+    "swiper": "^12.0.2"
+  },
   "devDependencies": {
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.14"
-  },
-  "dependencies": {
-    "swiper": "^12.0.2"
->>>>>>> 085d4a12390167a38363fa7935f594e3aa9ab81e
   }
 }
